package com.bitssmart.smartRestaurant.Model;

public enum OrderStatus {

	IS_COOKING,
    COOKED,
    SERVED,
    CANCELLED
}
