package com.bitssmart.smartRestaurant.Model;

public enum PaymentOptions {

	CASH,
    UPI,
    CARD,
    NET_BANKING,
    GENERATED_QR,
    ONLINE_CARD_PAYMENT
}
